# deep-topology

./: Makefile  README.md  pyproject.toml  setup.cfg
deep_topology/: layers.py  topology_tf.py
deep_topology/data/: __init__.py  spheres.py
notebooks/: spheres_dataset.ipynb  train_autoencoder.ipynb  train_topogically_dense_regularization.ipynb
tests/: test_layer.py  test_layers.py  test_topology.py
tests/test_data/: test_spheres.py
topo_ae/: layer.py  topology_np.py
topo_ae/data/: __init__.py  ordered_mnist.py
