[tool.poetry]
name = "topo_ae"
version = "0.1.0"
description = "Tensorflow implementation of Topological Autoencoders (ICML 2020)"
authors = ["ali-tny <aliteeney@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.3.1"
matplotlib = "*"
tensorflow-datasets = "^4.1.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "*"
black = "^20.8b1"
ipython = "^7.18.1"
jupyter = "^1.0.0"
scikit-learn = "^0.23.2"
pytest = "^6.1.1"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry>=0.12"]
Build-backend = "poetry.masonry.api"
